--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,127 @@
+%%Griffiths
+@book{Griffiths:2008zz,
+      author         = "Griffiths, David",
+      title          = "{Introduction to elementary particles}",
+      journal        = "Weinheim, Germany: Wiley-VCH (2008) 454 p",
+      year           = "2008",
+      ISBN           = "9783527406012",
+      SLACcitation   = "%%CITATION = INSPIRE-806976;%%"
+}
+
+%article about history of neutrino
+@article{Brown:1978pb,
+      author         = "Brown, Laurie M.",
+      title          = "{The idea of the neutrino}",
+      journal        = "Phys. Today",
+      volume         = "31N9",
+      year           = "1978",
+      pages          = "23-28",
+      doi            = "10.1063/1.2995181",
+      SLACcitation   = "%%CITATION = PHTOA,31N9,23;%%"
+}
+
+%fermi beta radiation
+@article{Fermi:1934hr,
+      author         = "Fermi, E.",
+      title          = "{An attempt of a theory of beta radiation. 1.}",
+      journal        = "Z. Phys.",
+      volume         = "88",
+      year           = "1934",
+      pages          = "161-177",
+      doi            = "10.1007/BF01351864",
+      reportNumber   = "UCRL-TRANS-726",
+      SLACcitation   = "%%CITATION = ZEPYA,88,161;%%"
+     
+      
+      
+}
+%translation
+@article{Wilson:1968pwx,
+      author         = "Wilson, Fred L.",
+      title          = "{Fermi's Theory of Beta Decay}",
+      journal        = "Am. J. Phys.",
+      volume         = "36",
+      year           = "1968",
+      number         = "12",
+      pages          = "1150-1160",
+      doi            = "10.1119/1.1974382",
+      SLACcitation   = "%%CITATION = AJPIA,36,1150;%%"
+}
+
+%Cowan & Reines detection of neutrino
+@article{Reines:1953pu,
+      author         = "Reines, F. and Cowan, C. L.",
+      title          = "{Detection of the free neutrino}",
+      journal        = "Phys. Rev.",
+      volume         = "92",
+      year           = "1953",
+      pages          = "830-831",
+      doi            = "10.1103/PhysRev.92.830",
+      SLACcitation   = "%%CITATION = PHRVA,92,830;%%"
+}
+
+@article{Reines:1953kf,
+      author         = "Reines, F. and Cowan, C. L.",
+      title          = "{A Proposed experiment to detect the free neutrino}",
+      journal        = "Phys. Rev.",
+      volume         = "90",
+      year           = "1953",
+      pages          = "492-493",
+      doi            = "10.1103/PhysRev.90.492",
+      SLACcitation   = "%%CITATION = PHRVA,90,492;%%"
+}
+
+@article{Cowan:1953mw,
+      author         = "Cowan, C. L. and Reines, F. and Harrison, F. B. and
+                        Anderson, E. C. and Hayes, F. N.",
+      title          = "{Large liquid scintillation detectors}",
+      journal        = "Phys. Rev.",
+      volume         = "90",
+      year           = "1953",
+      pages          = "493-494",
+      doi            = "10.1103/PhysRev.90.493",
+      SLACcitation   = "%%CITATION = PHRVA,90,493;%%"
+}
+
+%observation confirmed
+@article{Cowan:1992xc,
+      author         = "Cowan, C. L. and Reines, F. and Harrison, F. B. and
+                        Kruse, H. W. and McGuire, A. D.",
+      title          = "{Detection of the free neutrino: A Confirmation}",
+      journal        = "Science",
+      volume         = "124",
+      year           = "1956",
+      pages          = "103-104",
+      doi            = "10.1126/science.124.3212.103",
+      SLACcitation   = "%%CITATION = SCIEA,124,103;%%"
+}
+
+@article{Reines:1956rs,
+      author         = "Reines, Frederick and Cowan, Clyde L.",
+      title          = "{The neutrino}",
+      journal        = "Nature",
+      volume         = "178",
+      year           = "1956",
+      pages          = "446-449",
+      doi            = "10.1038/178446a0",
+      SLACcitation   = "%%CITATION = NATUA,178,446;%%"
+}
+
+%ibd pontecorvo
+@article{Pontecorvo:1946mv,
+      author         = "Pontecorvo, B.",
+      title          = "{Inverse beta process}",
+      booktitle      = "{In *Winter, K. (ed.): Neutrino physics* 25-31, In
+                        *Pontecorvo, B.: Selected scientific works* 21-26, In
+                        *Bahcall, J.N. (ed.) et al.: Solar neutrinos* 97-106}",
+      journal        = "Camb. Monogr. Part. Phys. Nucl. Phys. Cosmol.",
+      volume         = "1",
+      year           = "1991",
+      pages          = "25-31",
+      reportNumber   = "PD-205",
+      SLACcitation   = "%%CITATION = CMPCE,1,25;%%"
+}
+
 @article{Agashe:2014yua,
       author         = "Agashe, Kaustubh and Cui, Yanou and Necib, Lina and
                         Thaler, Jesse",
@@ -207,24 +331,34 @@ month = oct
 %% Planck and WMAP
 
 @article{PlanckCollaboration:2016cf,
-author = {{Planck Collaboration} and Adam, R and Ade, P A R and Aghanim, N and Akrami, Y and Alves, M I R and Arg{\"u}eso, F and Arnaud, M and Arroja, F and Ashdown, M and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, A J and Barreiro, R B and Bartlett, J G and Bartolo, N and Basak, S and Battaglia, P and Battaner, E and Battye, R and Benabed, K and Beno{\^\i}t, A and Benoit-L{\'e}vy, A and Bernard, J P and Bersanelli, M and Bertincourt, B and Bielewicz, P and Bikmaev, I and Bock, J J and B{\"o}hringer, H and Bonaldi, A and Bonavera, L and Bond, J R and Borrill, J and Bouchet, F R and Boulanger, F and Bucher, M and Burenin, R and Burigana, C and Butler, R C and Calabrese, E and Cardoso, J F and Carvalho, P and Casaponsa, B and Castex, G and Catalano, A and Challinor, A and Chamballu, A and Chary, R R and Chiang, H C and Chluba, J and Chon, G and Christensen, P R and Church, S and Clemens, M and Clements, D L and Colombi, S and Colombo, L P L and Combet, C and Comis, B and Contreras, D and Couchot, F and Coulais, A and Crill, B P and Cruz, M and Curto, A and Cuttaia, F and Danese, L and Davies, R D and Davis, R J and de Bernardis, P and de Rosa, A and de Zotti, G and Delabrouille, J and Delouis, J M and D{\'e}sert, F X and Di Valentino, E and Dickinson, C and Diego, J M and Dolag, K and Dole, H and Donzelli, S and Dor{\'e}, O and Douspis, M and Ducout, A and Dunkley, J and Dupac, X and Efstathiou, G and Eisenhardt, P R M and Elsner, F and En{\ss}lin, T A and Eriksen, H K and Falgarone, E and Fantaye, Y and Farhang, M and Feeney, S and Fergusson, J and Fernandez-Cobos, R and Feroz, F and Finelli, F and Florido, E and Forni, O and Frailis, M and Fraisse, A A and Franceschet, C and Franceschi, E and Frejsel, A and Frolov, A and Galeotta, S and Galli, S and Ganga, K and Gauthier, C and G{\'e}nova-Santos, R T and Gerbino, M and Ghosh, T and Giard, M and Giraud-H{\'e}raud, Y and Giusarma, E and Gjerl{\o}w, E and Gonz{\'a}lez-Nuevo, J and G{\'o}rski, K M and Grainge, K J B and Gratton, S and Gregorio, A and Gruppuso, A and Gudmundsson, J E and Hamann, J and Handley, W and Hansen, F K and Hanson, D and Harrison, D L and Heavens, A and Helou, G and Henrot-Versill{\'e}, S and Hern{\'a}ndez-Monteagudo, C and Herranz, D and Hildebrandt, S R and Hivon, E and Hobson, M and Holmes, W A and Hornstrup, A and Hovest, W and Huang, Z and Huffenberger, K M and Hurier, G and Ili{\'c}, S and Jaffe, A H and Jaffe, T R and Jin, T and Jones, W C and Juvela, M and Karakci, A and Keih{\"a}nen, E and Keskitalo, R and Khamitov, I and Kiiveri, K and Kim, J and Kisner, T S and Kneissl, R and Knoche, J and Knox, L and Krachmalnicoff, N and Kunz, M and Kurki-Suonio, H and Lacasa, F and Lagache, G and L{\"a}hteenm{\"a}ki, A and Lamarre, J M and Langer, M and Lasenby, A and Lattanzi, M and Lawrence, C R and Le Jeune, M and Leahy, J P and Lellouch, E and Leonardi, R and Le{\'o}n-Tavares, J and Lesgourgues, J and Levrier, F and Lewis, A and Liguori, M and Lilje, P B and Lilley, M and Linden-V{\o}rnle, M and Lindholm, V and Liu, H and L{\'o}pez-Caniego, M and Lubin, P M and Ma, Y Z and Mac{\'\i}as-P{\'e}rez, J F and Maggio, G and Maino, D and Mak, D S Y and Mandolesi, N and Mangilli, A and Marchini, A and Marcos-Caballero, A and Marinucci, D and Maris, M and Marshall, D J and Martin, P G and Martinelli, M and Mart{\'\i}nez-Gonz{\'a}lez, E and Masi, S and Matarrese, S and Mazzotta, P and McEwen, J D and McGehee, P and Mei, S and Meinhold, P R and Melchiorri, A and Melin, J B and Mendes, L and Mennella, A and Migliaccio, M and Mikkelsen, K and Millea, M and Mitra, S and Miville-Desch{\^e}nes, M A and Molinari, D and Moneti, A and Montier, L and Moreno, R and Morgante, G and Mortlock, D and Moss, A and Mottet, S and M{\"u}nchmeyer, M and Munshi, D and Murphy, J A and Narimani, A and Naselsky, P and Nastasi, A and Nati, F and Natoli, P and Negrello, M and Netterfield, C B and N{\o}rgaard-Nielsen, H U and Noviello, F and Novikov, D and Novikov, I and Olamaie, M and Oppermann, N and Orlando, E and Oxborrow, C A and Paci, F and Pagano, L and Pajot, F and Paladini, R and Pandolfi, S and Paoletti, D and Partridge, B and Pasian, F and Patanchon, G and Pearson, T J and Peel, M and Peiris, H V and Pelkonen, V M and Perdereau, O and Perotto, L and Perrott, Y C and Perrotta, F and Pettorino, V and Piacentini, F and Piat, M and Pierpaoli, E and Pietrobon, D and Plaszczynski, S and Pogosyan, D and Pointecouteau, E and Polenta, G and Popa, L and Pratt, G W and Pr{\'e}zeau, G and Prunet, S and Puget, J L and Rachen, J P and Racine, B and Reach, W T and Rebolo, R and Reinecke, M and Remazeilles, M and Renault, C and Renzi, A and Ristorcelli, I and Rocha, G and Roman, M and Romelli, E and Rosset, C and Rossetti, M and...},
-title = {{Planck2015 results}},
-journal = {Astronomy {\&} Astrophysics},
-year = {2016},
-volume = {594},
-pages = {A1--38},
-month = sep
+      author         = "Ade, P. A. R. and others",
+      title          = "{Planck 2015 results. XIII. Cosmological parameters}",
+      collaboration  = "Planck",
+      journal        = "Astron. Astrophys.",
+      volume         = "594",
+      year           = "2016",
+      pages          = "A13",
+      doi            = "10.1051/0004-6361/201525830",
+      eprint         = "1502.01589",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01589;%%"
 }
 
 @article{Hinshaw:2013dd,
-author = {Hinshaw, G and Larson, D and Komatsu, E and Spergel, D N and Bennett, C L and Dunkley, J and Nolta, M R and Halpern, M and Hill, R S and Odegard, N and Page, L and Smith, K M and Weiland, J L and Gold, B and Jarosik, N and Kogut, A and Limon, M and Meyer, S S and Tucker, G S and Wollack, E and Wright, E L},
-title = {{NINE-YEAR WILKINSON MICROWAVE ANISOTROPY PROBE( WMAP) OBSERVATIONS: COSMOLOGICAL PARAMETER RESULTS}},
-journal = {The Astrophysical Journal Supplement Series},
-year = {2013},
-volume = {208},
-number = {2},
-pages = {19--25},
-month = oct
+      author         = "Hinshaw, G. and others",
+      title          = "{Nine-Year Wilkinson Microwave Anisotropy Probe (WMAP) Observations: Cosmological Parameter Results}",
+      collaboration  = "WMAP",
+      journal        = "Astrophys. J. Suppl.",
+      volume         = "208",
+      year           = "2013",
+      collaboration  = "WMAP",
+      pages          = "19",
+      doi            = "10.1088/0067-0049/208/2/19",
+      eprint         = "1212.5226",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1212.5226;%%"
 }
 
 %%WIMP direct detection
