sk_detector section, cherenkov radiation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -122,6 +122,47 @@
       SLACcitation   = "%%CITATION = CMPCE,1,25;%%"
 }
 
+%sk detector
+@article{Fukuda:2002uc,
+      author         = "Fukuda, Y. and others",
+      title          = "{The Super-Kamiokande detector}",
+      booktitle      = "{Advanced computing and analysis techniques in physics
+                        research. Proceedings, 8th International Workshop, ACAT
+                        2002, Moscow, Russia, June 24-28, 2002}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A501",
+      year           = "2003",
+      pages          = "418-462",
+      doi            = "10.1016/S0168-9002(03)00425-X",
+      SLACcitation   = "%%CITATION = NUIMA,A501,418;%%"
+}
+
+%sk calibration
+@article{Abe:2013gga,
+      author         = "Abe, K. and others",
+      title          = "{Calibration of the Super-Kamiokande Detector}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A737",
+      year           = "2014",
+      pages          = "253-272",
+      doi            = "10.1016/j.nima.2013.11.081",
+      eprint         = "1307.0162",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1307.0162;%%"
+}
+
+%jackson electrodynamics
+@book{Jackson:1998nia,
+      author         = "Jackson, John David",
+      title          = "{Classical Electrodynamics}",
+      publisher      = "Wiley",
+      year           = "1998",
+      ISBN           = "9780471309321",
+      SLACcitation   = "%%CITATION = INSPIRE-1390077;%%"
+}
+
 @article{Agashe:2014yua,
       author         = "Agashe, Kaustubh and Cui, Yanou and Necib, Lina and
                         Thaler, Jesse",
