--- a/thesis.tex
+++ b/thesis.tex
@@ -134,6 +134,11 @@
 % motivation & theory
 \include{theory/theory}
 
+%SK detector
+\include{sk_detector/sk_detector}
+
+
+
 \include{Boosted_dm/boosted_dm}
 %===================================================
 
