--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -19,7 +19,7 @@
 \usepackage[hang,small,bf]{caption}
 
 % feynman diagrams
-\usepackage{feynmp}
+%\usepackage{feynmp}
 \DeclareGraphicsRule{*}{mps}{*}{} 
 % rotate figures, captions, and tables
 \usepackage{rotating}
@@ -68,7 +68,7 @@
 % customize enumeration
 \usepackage{enumerate}
 
-\usepackage[noabbrev,capitalize]{cleveref}
+
 \usepackage{appendix}
 \RequirePackage{luatex85}
 \usepackage{luatex85}
@@ -84,9 +84,7 @@
 % nicer alternative to \cite
 \usepackage[numbers,sort&compress]{natbib}
 
-% hyper-referenced citation
-\usepackage{hypernat}
-%---------------------------------------------------
+
 
 %---------------------------------------------------
 % hyper-references
@@ -99,6 +97,13 @@
             bookmarkstype=toc=true,
             bookmarksnumbered=true]{hyperref}
 
+% hyper-referenced citation
+\usepackage{hypernat}
+%---------------------------------------------------
+
 % fix reference pointing to figures and tables
 \usepackage[all]{hypcap}
 %---------------------------------------------------
+
+%cleverref
+\usepackage[noabbrev,capitalize]{cleveref}
