--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,6 +153,30 @@
       SLACcitation   = "%%CITATION = ARXIV:1307.0162;%%"
 }
 
+%piotr thesis
+@phdthesis{Mijakowski:2011zz,
+      author         = "Mijakowski, Piotr",
+      title          = "{Direct and Indirect Search for Dark Matter}",
+      school         = "Warsaw, Inst. Nucl. Studies",
+      year           = "2011",
+      url            = "http://www-sk.icrr.u-tokyo.ac.jp/sk/pub/PiotrMijakowski_phd.pdf",
+      SLACcitation   = "%%CITATION = INSPIRE-944101;%%"
+}
+
+%pmt improvements sk
+@article{Suzuki:1992as,
+      author         = "Suzuki, A. and Mori, M. and Kaneyuki, K. and Tanimori, T.
+                        and Takeuchi, J. and Kyushima, H. and Ohashi, Y.",
+      title          = "{Improvement of 20-inch diameter photomultiplier tubes}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A329",
+      year           = "1993",
+      pages          = "299-313",
+      doi            = "10.1016/0168-9002(93)90949-I",
+      reportNumber   = "KEK-PREPRINT-92-50",
+      SLACcitation   = "%%CITATION = NUIMA,A329,299;%%"
+}
+
 %jackson electrodynamics
 @book{Jackson:1998nia,
       author         = "Jackson, John David",
