--- a/sk_detector/overview.tex
+++ b/sk_detector/overview.tex
@@ -1,4 +1,4 @@
 \section{Overview}
 \label{sec:sk_detector_overview}
-The SK detector is a large water Cherenkov detector located in the Mozumi mine below Mt. Ikenoyama in Gifu, Japan, with a mean overburden of 1000 m of rock (2700 m water-equivalent.).  It consists of a 50 kT cylindrical tank of water, which is divided into a 32 kT inner detector (ID) surrounded by an 18 kT outer detector (OD).  The ID and the OD are optically separated by black Tyvek sheeting, and both instrumented with photomultiplier tubes (PMTs) to observe Cherenkov radiation. It's large fiducial volume and high quality reconstruction capabilities make it an extremely effective detector for nucleon decay searches and studies of neutrinos over a wide range of energies. \par
+The SK detector is a large water Cherenkov detector located in the Mozumi mine below Mt. Ikenoyama in Gifu, Japan, with a mean overburden of 1000 m of rock (2700 m water-equivalent.).  This overburden removes cosmic ray muons with energies less than 1.3 TeV.  The consists of a 50 kT cylindrical tank of water, which is divided into a 32 kT inner detector (ID) surrounded by an 18 kT outer detector (OD).  The ID and the OD are optically separated by black Tyvek sheeting, and both instrumented with photomultiplier tubes (PMTs) to observe Cherenkov radiation. It's large fiducial volume and high quality reconstruction capabilities make it an extremely effective detector for nucleon decay searches and studies of neutrinos over a wide range of energies. \par
 The detector's data taking lifetime, which began with it's commissioning  April 1996, is divided into four phases.  The first phase, known as ``SK-I", acquired 1489.2 livetime days of data, running from commissioning until July 2001, when the detector was shut down for maintenance and upgrades.  During the refilling of the tank in November 2001, and accident destroyed over half of the ID PMTs.  The remaining ID PMTs were fitted with protective cases to avoid a future accident and redistributed, and the second phase, known as ``SK-II", ran from October 2002 until October 2005 with only half the ID PMT coverage of SK-I, acquiring 798.6 livetime days of data.  During the shutdown after SK-II, new ID PMTs were added, and data taking resumed in July 2006 with the ID PMT coverage back at SK-I levels.  This third phase is known as ``SK-III", and acquired 518.1 livetime days of data, running until September 2008, when the experiment was briefly shutdown for an electronics upgrade.  Upon restarting in September 2008 SK entered it's fourth phase, known as ``SK-IV", which is ongoing as of the writing of this thesis, and which has acquired 2867.2 livetime days of data as of May 2017.  In total, SK has recorded 5673.1 livetime days of data (as of May 2017) with just over half of that data coming during SK-IV.      
