--- a/thesis.tex
+++ b/thesis.tex
@@ -137,8 +137,10 @@
 %SK detector
 \include{sk_detector/sk_detector}
 
+%reconstruction
+\include{event_reconstruction/event_reconstruction}
 
-
+%Boosted dark matter
 \include{Boosted_dm/boosted_dm}
 %===================================================
 
