fixed enumeration issue in prospectus

--- a/prospectus.tex
+++ b/prospectus.tex
@@ -85,8 +85,10 @@ We can search for boosted dark matter in SK by looking for elastically scattered
 	\item History of Neutrinos 
 		\begin{itemize}
 		\item A brief history of neutrino physics.  Proposal by Pauli, discovery, solar neutrino problem, discovery of oscillation. 
+		\end{itemize}
 		\begin{itemize}
 	\item History of Dark Matter
+		\end{itemize}
 		\begin{itemize}
 		\item A brief history of dark matter physics.  Galactic rotation curves, bullet cluster, null results so far
 		\end{itemize}
