--- a/sk_detector/pmts.tex
+++ b/sk_detector/pmts.tex
@@ -35,7 +35,7 @@ The OD PMTs are 8-inch PMTs, also produced by Hamamatsu.  Five-hundred ninety-on
 \begin{figure}
 \centering
 \includegraphics{figures/OD_1pe_distribution.jpg}
-\caption{Top: Single p.e. distribution of OD old PMTs (Top) and new PMTs (Bottom).}
+\caption{Top: Single p.e. distribution of OD old PMTs (Top) and new PMTs (Bottom). Both from \cite{Abe:2013gga}}
 \label{fig:od_1pe}
 \end{figure}
  
