--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,6 +153,17 @@
       SLACcitation   = "%%CITATION = ARXIV:1307.0162;%%"
 }
 
+%Nishino-san thesis
+@phdthesis{Nishino:2009lps,
+      author         = "Nishino, H",
+      title          = "{Search for Nucleon Decay into Charged Antilepton plus
+                        Meson in Super-Kamiokande}",
+      school         = "Tokyo U.",
+      year           = "2009",
+      url            = "http://www-sk.icrr.u-tokyo.ac.jp/sk/pub/index.html#dthesis",
+      SLACcitation   = "%%CITATION = INSPIRE-1215814;%%"
+}
+
 %piotr thesis
 @phdthesis{Mijakowski:2011zz,
       author         = "Mijakowski, Piotr",
