--- a/prospectus.tex
+++ b/prospectus.tex
@@ -73,11 +73,18 @@ At Super-Kamiokande, we can probe these three unkowns of neutrino oscillation us
 H_{\textrm{matter}}=\begin{pmatrix}\frac{m_1^2}{2E}&0&0\\0&\frac{m_2^2}{2E}&0\\0&0&\frac{m_3^2}{2E} \end{pmatrix}  + U^\dagger\begin{pmatrix}a&0&0\\0&0&0\\0&0&0\end{pmatrix}U
 \label{eqn:hamiltonian_matter}
 \end{equation}
-where $a=\pm\sqrt{2}G_FN_e$, $G_f$ is the Fermi constant, $N_e$ is the electron density, $U$ is the PMNS matrix, and the plus (minus) sign is for neutrinos (antineutrinos).  This results in a resonant enhancement in the $\nu_\mu \rightarrow \nu_e$ oscillation for neutrinos with energies around 5 to 10 GeV crossing the mantle of the Earth.  Importantly, the enhancement occurs for \emph{either} neutrinos or antineutrinos, depending on the hierarchy.  Although SK is not directly sensitive to lepton charge, samples can be created which are more or less populated with neutrinos or antineutrinos.  In this way, by looking at which samples this resonance is observed in, we can attempt to extract a hierarchy preference from SK data.  \par
+where $a=\pm\sqrt{2}G_FN_e$, $G_f$ is the Fermi constant, $N_e$ is the electron density, $U$ is the PMNS matrix, and the plus (minus) sign is for neutrinos (antineutrinos).  This results in a resonant enhancement in the $\nu_\mu \rightarrow \nu_e$ oscillation for neutrinos with energies around 5 to 10 GeV crossing the mantle of the Earth.  Importantly, the enhancement occurs for \emph{either} neutrinos or antineutrinos, depending on the hierarchy.  Although SK is not directly sensitive to lepton charge, samples can be created which are more or less populated with neutrinos or antineutrinos.  In this way, by looking at which samples this resonance is observed in, we can attempt to extract a hierarchy preference from SK data.  In my thesis, I will present an analysis which looks for signs of matter effects in SK atmospheric neutrino data.  Since sensitivity to mass hierarchy at SK (or future atmospheric neutrino experiments) is dependent on matter effects, observation of these effects is an important step.\par
+Recently, a ~2$\sigma$ tension has appeared between the measurements of $\theta_{23}$ by T2K and NO$\nu$A.  While 2$\sigma$ is certainly nothing to get excited about, this could potentially be the first signal of some new physics.  Particularly, there have been recent suggestions that this tension can be alleviated by introducing a decoherence term to the standard oscillation parameters.  Such decoherence terms are essentially phenomenological at present, often motivated by quantum gravity.  They come from introducing an additional dissipative term to the Louiville equation:
+\begin{equation}
+\frac{d\rho}{dt}=-i[H,\rho]-\mathcal{D}[\rho]
+\end{equation}
+where $\rho$ is the density matrix, $H$ is the system Hamiltonian, and $\mathcal{D}[\rho]$ is the additional dissipative term.  This leads to oscillation terms that go as $e^{-\Gamma L} \cos \frac{\Delta m^2 L}{2E}$, instead of the usual $\cos \frac{\Delta m^2 L}{2E}$.     
+These explanations rely on a decoherence parameter strength allowed by previous SK limits, however, those limits were set with only about a quarter of the SK data that has now been accumulated.  Those limits were also based on a 2-flavor neutrino model, and did not include matter effects.  I will calculate new limits on decoherence using SK atmospheric neutrinos, using the 3-flavor neutrino model and matter effects, to find whether the decoherence explanation of the T2K-NO$\nu$A tension remains viable.\par
 SK can also be used for astrophysical searches, often particular in reference to dark matter.  While there has long been ample evidence of the existence of dark matter, the specific properties and identity of dark matter remain elusive.  The $\Lambda$CDM cosmology, which consists of long lived dark matter which is non-relativistic (``cold") at current times and a cosmological constant $\Lambda$ which corresponds to dark energy, has been well supported by cosmological observations.  Under this cosmology, the dark matter abundance has been measured by Planck and WMAP through observation of the Cosmic Microwave Background (CMB) to account for about 25\% of the energy density of the universe.  However, beyond it's existence and abundance, little else is known about the properties of dark matter.  A promising possible cold dark matter particle is the Weakly Interacting Massive Particle (WIMP), but thus far attempts at it's direct detection have left such a particle undiscovered. Indirect detection searches for dark matter through the detection of it's standard model annihilation products, as well as searches for dark matter produced at particle accelerators have thus far similarly produced null results.\par   
 In contrast to cold dark matter, boosted dark matter is relativistic dark matter which has been produced at late times.  Models including boosted dark matter have been recently introduced and discussed in multiple theory papers.  These models remain consistent with $\Lambda$CDM by proposing boosted dark matter as a subdominant dark matter component, with a dominant cold dark matter component accounting for most of the dark matter energy density of the universe.  The subdominant boosted dark matter can be the same particle as the dominant cold dark matter, or it can be a different, lighter particle.  In these models, boosted dark matter can be produced from the dominant cold dark matter through multiple processes, including annihilation, semi-annihilation, 3$\rightarrow$2 self-annihilation, and decay.  Boosted dark matter can then be observed scattering electrons or nuclei in large volume terrestrial detectors.  Current direct detection limits can be evaded in multi-component models by having only the boosted dark matter species couple directly to standard matter or in single-component models by invoking a spin dependent dark matter-nucleon cross section. \par
-We can search for boosted dark matter in SK by looking for elastically scattered electrons with energies greater ranging from 100 MeV to 1 TeV.  This is a class of events that has never before been studied at SK; while elastically scattered electrons have been studied extensively in the solar neutrino energy range (1-10 MeV), the neutrino-nucleus cross section dominates the neutrino-electron cross section for neutrinos above 100 MeV.  Since boosted dark matter is likely to originate in regions of high dark matter density, we look for elastically scattered electrons which point back to the galactic center.  We select events which could be elastically scattered electrons with a simple cuts-based approach, using standard SK reconstruction variables.  We count the number of events in cones of different size around the galactic center, and compares these counts to the expected background from atmospheric neutrinos.  The background is estimated by counting events in sidebands at the same declination as the cones around the galactic center, which gives us a completely data driven, MC free background estimate.  The analysis is purposefully kept simple and model independent so that our results can be easily adapted to any particular boosted dark matter model.\par
-\newpage
+We can search for boosted dark matter in SK by looking for elastically scattered electrons with energies greater ranging from 100 MeV to 1 TeV.  This is a class of events that has never before been studied at SK; while elastically scattered electrons have been studied extensively in the solar neutrino energy range (1-10 MeV), the neutrino-nucleus cross section dominates the neutrino-electron cross section for neutrinos above 100 MeV.  Since boosted dark matter is likely to originate in regions of high dark matter density, we look for elastically scattered electrons which point back to the galactic center.  We select events which could be elastically scattered electrons with a simple cuts-based approach, using standard SK reconstruction variables.  We count the number of events in cones of different size around the galactic center, and compares these counts to the expected background from atmospheric neutrinos.  The background is estimated by counting events in sidebands at the same declination as the cones around the galactic center, which gives us a completely data driven, MC free background estimate.  The analysis is purposefully kept simple and model independent so that our results can be easily adapted to any particular boosted dark matter model.
+\\
+\\
 \bf{Thesis Outline}
 \begin{enumerate}
 \item Introduction
@@ -86,12 +93,127 @@ We can search for boosted dark matter in SK by looking for elastically scattered
 		\begin{itemize}
 		\item A brief history of neutrino physics.  Proposal by Pauli, discovery, solar neutrino problem, discovery of oscillation. 
 		\end{itemize}
-		\begin{itemize}
 	\item History of Dark Matter
-		\end{itemize}
 		\begin{itemize}
 		\item A brief history of dark matter physics.  Galactic rotation curves, bullet cluster, null results so far
 		\end{itemize}
-	\end{itemize}   
+	\item This Thesis
+		\begin{itemize}
+		\item What it to come in thesis.
+		\end{itemize}
+	\end{itemize} 
+\item Theory and Motivation
+	\begin{itemize}
+	\item Neutrino Oscillations
+		\begin{itemize}
+		\item In Vacuum
+		\item In Matter
+		\item Current state of parameters
+			\begin{itemize}
+			\item recent results
+			\end{itemize}
+		\end{itemize}
+	\item Dark Matter
+		\begin{itemize}
+		\item Evidence for dark matter
+			\begin{itemize}
+			\item Galactic rotation curves, bullet cluster
+			\item CMB measurement of universe composition	
+			\end{itemize}
+		\item Possible Dark Matter theories
+			\begin{itemize}
+			\item neutrinos
+				\begin{itemize}					
+				\item idea, limits (mass too small)
+				\end{itemize}
+			\item axions
+				\begin{itemize}
+				\item idea, limits (experimental)
+				\end{itemize}
+			\item WIMPs
+				\begin{itemize}
+				\item idea
+				\item limits (direct detection, indirect detection, accelerators)
+				\end{itemize}
+			\end{itemize}
+		\end{itemize}
+	\end{itemize}
+\item Super-Kamiokande Detector
+	\begin{itemize}
+	\item Overview
+	\item The Tank
+	\item Cherenkov Radiation
+	\item Photomultiplier Tubes
+	\item Electronics and Data Acquisition
+  	\item Water System
+	\item Detector Calibration
+	\end{itemize}
+\item Data Processing
+	\begin{itemize}
+	\item Data Reduction
+		\begin{itemize}
+		\item Fully Contained Events
+		\item Partially Contained Events
+		\item Upward Going Muons
+		\end{itemize}
+	\item Event Reconstruction
+		\begin{itemize}
+		\item Vertex Reconstruction
+		\item Ring Counting
+		\item Particle ID
+		\item Energy Reconstruction
+		\item decay electrons
+		\item neutron tagging
+		\end{itemize}
+	\end{itemize} 
+\item Atmospheric Neutrino Analysis
+	\begin{itemize}
+	\item Atmospheric Neutrino Production
+	\item Atmospheric Neutrino Oscillations
+		\begin{itemize}
+		\item which parameters effect
+		\item oscillograms
+		\end{itemize}
+	\item Atmospheric Neutrino Simulation
+	\item Matter Effects Analysis
+		\begin{itemize}
+		\item Analysis Technique
+			\begin{itemize}
+			\item Subsamples
+			\item Binning
+			\item systematic errors
+			\item sensitivity
+			\item results
+			\end{itemize} 
+		\end{itemize}
+	\item Decoherence Analysis
+		\begin{itemize}
+		\item Motivation
+			\begin{itemize}
+			\item T2K-NO$\nu$A tension
+			\end{itemize}
+		\item theory
+			\begin{itemize}
+			\item Lindblad Equation
+			\item 2-flavor
+			\item 3-flavor (vac)
+			\item 3-flavor (matter)	
+			\end{itemize}
+		\item sensitivity
+		\item results
+		\end{itemize}
+	\end{itemize} 
+\item Boosted Dark Matter
+	\begin{itemize}
+	\item Boosted Dark Matter Theory
+	\item Galactic Halo Models
+	\item Event Selection
+	\item Signal MC
+	\item Ring Counting
+	\item Analysis Technique
+	\item Background Estimation
+	\item results
+	\end{itemize}
+\item Conclusion
 \end{enumerate}
 \end{document}
