sk_detector/daq finished, sk_detector/water_system finished, sk_detector/calibration begun

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,6 +153,41 @@
       SLACcitation   = "%%CITATION = ARXIV:1307.0162;%%"
 }
 
+%sk-IV electronics upgrade
+@article{Yamada:2010zzc,
+      author         = "Yamada, S. and others",
+      title          = "{Commissioning of the new electronics and online system
+                        for the Super-Kamiokande experiment}",
+      booktitle      = "{Real time. Proceedings, 16th Conference on Computing
+                        Applications in Nuclear and Plasma Sciences, RT2009,
+                        Beijing, P.R. China, May 10-15, 2009}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "IEEE Trans. Nucl. Sci.",
+      volume         = "57",
+      year           = "2010",
+      pages          = "428-432",
+      doi            = "10.1109/TNS.2009.2034854",
+      SLACcitation   = "%%CITATION = IETNA,57,428;%%"
+}
+
+%sk-IV electronics upgrad, ASIC
+@article{Nishino:2009zu,
+      author         = "Nishino, H. and Awai, K. and Hayato, Y. and Nakayama, S.
+                        and Okumura, K. and Shiozawa, M. and Takeda, A. and
+                        Ishikawa, K. and Minegishi, A. and Arai, Y.",
+      title          = "{High-speed charge-to-time converter ASIC for the
+                        Super-Kamiokande detector}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A610",
+      year           = "2009",
+      pages          = "710-717",
+      doi            = "10.1016/j.nima.2009.09.026",
+      eprint         = "0911.0986",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:0911.0986;%%"
+}
+
 %Nishino-san thesis
 @phdthesis{Nishino:2009lps,
       author         = "Nishino, H",
