--- a/sk_detector/water_system.tex
+++ b/sk_detector/water_system.tex
@@ -1,3 +1,4 @@
 \section{Water System}
 \label{sec:water_system}
- 
+Keeping the SK water as transparent and stable as possible is extremely important for physics analyses.  To this end, a water purification system is used to continuously reprocess the water in the SK tank, at a rate of about 60 tons/h.  This system is described extensively in \cite{Fukuda:2002uc}.  The system takes in water from the SK Tank,  a UV sterilizer kills any bacteria in the water, multiple filters reduce the concentration of particles larger than 0.2 $\mu$m to 6 particles/cc, and a vacuum degasifier and membrane degasifier together reduce the concentration of radon in the water to about 0.4 mBq/m$^3$, before the water is returned to the tank. A heat exchanger maintains the water at a temperature of about 13$^\circ$C.  \par
+Because the air in the mine has a naturally high radon concentration (ranging from a few hundred to a few thousand Bq/m$^3$, depending on the season), the gap between the top surface of the water and the top of the tank is filled with radon-reduced air at a slight overpressure.  This radon-reduced air is processed by an air purification system which outputs air with a radon concentration of a few mBq/m$^3$.  The radon concentration of th air in the dome above the SK cavity is maintained at around 40 Bq/m$^3$ by pumping air from outside the mine into the dome, and the walls of the dome are additionally coated with a radon tight plastic material from Mineguard.        
