--- a/thesis.tex
+++ b/thesis.tex
@@ -137,6 +137,9 @@
 %SK detector
 \include{sk_detector/sk_detector}
 
+%Data Processing
+\include{data_processing/data_processing}
+
 %reconstruction
 \include{event_reconstruction/event_reconstruction}
 
